--- a/ext/app/avic/qml/images/images.qrc
+++ b/ext/app/avic/qml/images/images.qrc
@@ -31,6 +31,7 @@
         <file>alten.png</file>
         <file>alten_s.svg</file>
         <file>logod.png</file>
+        <file>logod_B.png</file>        
         <file>AGL_Icons_Seatbelt_yellow.svg</file>
     </qresource>
 </RCC>
