adding pedal symbol

--- a/ext/app/avic/qml/images/images.qrc
+++ b/ext/app/avic/qml/images/images.qrc
@@ -32,6 +32,7 @@
         <file>alten_s.svg</file>
         <file>logod.png</file>
         <file>logod_B.png</file>        
+        <file>pedal.png</file>
         <file>AGL_Icons_Seatbelt_yellow.svg</file>
     </qresource>
 </RCC>
